# satscout

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  workflow.yml
examples/: README.md  olofsson2014_matrix.csv
satscout/: __init__.py  aoi.py  catalogs.py  cli.py  discover.py  olofsson.py  report.py  search.py  stac.py
tests/: test_aoi.py  test_cli.py  test_discover_search.py  test_olofsson.py  test_real_data.py  test_search_fallback.py  test_stac.py
