[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "satscout"
version = "0.1.0"
description = "Find, vet, and validate public satellite/climate datasets (STAC discovery + Olofsson et al. 2014 accuracy assessment)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Yazen Shunnar", email = "yazen.shunnar@gmail.com" }]
keywords = [
    "remote-sensing", "satellite", "stac", "earth-observation",
    "sentinel-2", "landsat", "accuracy-assessment", "area-estimation",
    "olofsson", "cloud-cover",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = ["requests>=2.28"]

[project.urls]
Homepage = "https://github.com/yz-al/satscout"
Repository = "https://github.com/yz-al/satscout"
Issues = "https://github.com/yz-al/satscout/issues"

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
satscout = "satscout.cli:main"

[tool.setuptools.packages.find]
include = ["satscout*"]

[tool.pytest.ini_options]
markers = ["network: tests that hit live public STAC APIs (deselect with '-m \"not network\"')"]
